fix menu and carousel on mobile

--- a/client/src/components/Header/Menu/Menu.module.scss
+++ b/client/src/components/Header/Menu/Menu.module.scss
@@ -139,6 +139,7 @@
   .menu__list {
     display: flex;
     justify-content: flex-end;
+    gap: 40px;
 
     li {
       margin: 0 20px;
